fix(layout): align header and content width with design

--- a/src/app/shared/components/header/header.scss
+++ b/src/app/shared/components/header/header.scss
@@ -1,9 +1,9 @@
 .header {
-  padding: 24px 40px;
+  padding-top: 39px;
 }
 
 .logo {
   display: block;
   width: 119px;
-  height: auto;
+  height: 46px;
 }
